NOISSUE - Add client_max_body_size 1024M for readers nginx
Signed-off-by: Manuel Imperiale <manuel.imperiale@gmail.com>

--- a/docker/nginx/nginx-key.conf
+++ b/docker/nginx/nginx-key.conf
@@ -118,6 +118,7 @@ http {
         # Proxy pass to postgres-reader service
         location /reader/ {
             include snippets/proxy-headers.conf;
+            client_max_body_size 1024M;
             proxy_pass http://postgres-reader:${MF_POSTGRES_READER_PORT}/;
         }
         location /messages {
