NOISSUE - Replace SDK by gRPC for retrieving thing key in certs svc
Signed-off-by: Manuel Imperiale <manuel.imperiale@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -848,11 +848,11 @@ services:
       MF_VAULT_CA_NAME: ${MF_VAULT_CA_NAME}
       MF_VAULT_CA_ROLE_NAME: ${MF_VAULT_CA_ROLE_NAME}
       MF_VAULT_PKI_PATH: ${MF_VAULT_PKI_PATH}
-      MF_THINGS_URL: ${MF_THINGS_URL}
-      MF_SDK_THINGS_PREFIX: ${MF_SDK_THINGS_PREFIX}
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_AUTH_GRPC_URL: ${MF_AUTH_GRPC_URL}
       MF_AUTH_GRPC_TIMEOUT: ${MF_AUTH_GRPC_TIMEOUT}
+      MF_THINGS_GRPC_URL: ${MF_THINGS_GRPC_URL}
+      MF_THINGS_GRPC_TIMEOUT: ${MF_THINGS_GRPC_TIMEOUT}
       MF_CERTS_VAULT_HOST: ${MF_CERTS_VAULT_HOST}
     volumes:
       - ./ssl/certs/ca.key:/etc/ssl/certs/ca.key
