--- a/docker/.env
+++ b/docker/.env
@@ -161,8 +161,8 @@ MF_CERTS_CLIENT_TLS=
 MF_CERTS_CA_CERTS=
 MF_CERTS_SERVER_CERT=
 MF_CERTS_SERVER_KEY=
-MF_THINGS_URL=http://172.17.0.1
-MF_SDK_THINGS_PREFIX=
+MF_THINGS_GRPC_URL=things:8183
+MF_THINGS_GRPC_TIMEOUT=1s
 MF_CERTS_SIGN_CA_PATH=/etc/ssl/certs/ca.crt
 MF_CERTS_SIGN_CA_KEY_PATH=/etc/ssl/certs/ca.key
 MF_CERTS_SIGN_HOURS_VALID=2048h
