--- a/docker/.env
+++ b/docker/.env
@@ -367,6 +367,7 @@ MF_RULES_SERVER_CERT=""
 MF_RULES_SERVER_KEY=""
 MF_RULES_CA_CERTS=""
 MF_RULES_CLIENT_TLS=false
+MF_RULES_SCRIPTS_ENABLED=false
 MF_RULES_DB_PORT=5432
 MF_RULES_DB_USER=mainflux
 MF_RULES_DB_PASS=mainflux
