--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -787,6 +787,7 @@ services:
       MF_RULES_DB_USER: ${MF_RULES_DB_USER}
       MF_RULES_DB_PASS: ${MF_RULES_DB_PASS}
       MF_RULES_DB: ${MF_RULES_DB}
+      MF_RULES_SCRIPTS_ENABLED: ${MF_RULES_SCRIPTS_ENABLED}
       MF_RULES_HTTP_PORT: ${MF_RULES_HTTP_PORT}
       MF_RULES_SERVER_CERT: ${MF_RULES_SERVER_CERT}
       MF_RULES_SERVER_KEY: ${MF_RULES_SERVER_KEY}
