Update email if user uses different provider id
Signed-off-by: Ana Domonji <domonjianna@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -87,7 +87,8 @@ MF_GOOGLE_USER_INFO=https://www.googleapis.com/oauth2/v2/userinfo
 MF_GOOGLE_REDIRECT_URL=/users/oauth/google/callback
 MF_GITHUB_CLIENT_ID=github-client-id
 MF_GITHUB_CLIENT_SECRET=github-client-secret
-MF_GITHUB_USER_INFO=https://api.github.com/user/emails
+MF_GITHUB_USER_INFO=https://api.github.com/user
+MF_GITHUB_USER_EMAILS=https://api.github.com/user/emails
 MF_GITHUB_REDIRECT_URL=/users/oauth/github/callback
 MF_REDIRECT_LOGIN_URL=/auth/login
 
