--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -201,6 +201,7 @@ services:
       MF_GITHUB_CLIENT_SECRET: ${MF_GITHUB_CLIENT_SECRET}
       MF_GITHUB_REDIRECT_URL: ${MF_GITHUB_REDIRECT_URL}
       MF_GITHUB_USER_INFO: ${MF_GITHUB_USER_INFO}
+      MF_GITHUB_USER_EMAILS: ${MF_GITHUB_USER_EMAILS}
       MF_REDIRECT_LOGIN_URL: ${MF_REDIRECT_LOGIN_URL}
     ports:
       - ${MF_USERS_HTTP_PORT}:${MF_USERS_HTTP_PORT}
