--- a/api/openapi/readers.yml
+++ b/api/openapi/readers.yml
@@ -191,7 +191,7 @@ paths:
       security:
         - bearerAuth: []
       description: |
-        Creates an export of JSON messages with optional filtering and format conversion.
+        Exports JSON messages with optional filtering and format conversion.
       tags:
         - json messages
       parameters:
@@ -225,7 +225,7 @@ paths:
       security:
         - bearerAuth: []
       description: |
-        Creates an export of SenML messages with optional filtering and format conversion.
+        Exports SenML messages with optional filtering and format conversion.
       tags:
         - senml messages
       parameters:
