--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -58,7 +52,7 @@ jobs:
       
       - name: Build and push Docker images
         run: |
-          make latest VERSION=${{ steps.version.outputs.version }}
+          make release VERSION=${{ steps.version.outputs.version }}
       
       - name: Build summary
         run: |
