--- a/docker/.env
+++ b/docker/.env
@@ -130,6 +130,8 @@ MF_MQTT_ADAPTER_DB_HOST=mqtt-db
 MF_MQTT_ADAPTER_DB_SSL_MODE=disable
 MF_MQTT_ADAPTER_DB_SSL_CERT=""
 MF_MQTT_ADAPTER_FORWARDER=true
+MF_MQTT_ADAPTER_ES_URL=redis://es-redis:${MF_REDIS_TCP_PORT}/0
+MF_MQTT_ADAPTER_EVENT_CONSUMER=mqtt-adapter
 
 ### VERNEMQ
 MF_DOCKER_VERNEMQ_ALLOW_ANONYMOUS=on
