--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -326,6 +326,8 @@ services:
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
       MF_AUTH_CACHE_URL: auth-redis:${MF_REDIS_TCP_PORT}
+      MF_MQTT_ADAPTER_ES_URL: ${MF_MQTT_ADAPTER_ES_URL}
+      MF_MQTT_ADAPTER_EVENT_CONSUMER: ${MF_MQTT_ADAPTER_EVENT_CONSUMER}
       MF_MQTT_ADAPTER_DB_PORT: ${MF_MQTT_ADAPTER_DB_PORT}
       MF_MQTT_ADAPTER_DB_USER: ${MF_MQTT_ADAPTER_DB_USER}
       MF_MQTT_ADAPTER_DB_PASS: ${MF_MQTT_ADAPTER_DB_PASS}
